assets/styles/site.css
html,
body {
    margin: 0;
    padding: 0;
    font-size: 1.1em;
    line-height: 1.4em;
    min-height: 100vh;
}

body {
    display: flex;
    flex-direction: column;
}

main {
    flex-grow: 1;
}


/* header */

header {
    background: #4c2889;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    padding-top: 25px;
}

a.brand {
    color: white;
    transition: color .4s ease;
    margin-right: 10px;
}

a.brand:hover {
    color: #d2e7f3;
}

.brand,
.brand svg {
    height: 40px;
}

.waves {
    width: 100%;
    margin-top: -1px;
}


/* utilities */

.d-none {
    display: none;
}


/* form */

form {
    display: flex;
    flex-direction: column;
    margin: 25px;
    position: relative;
    margin-bottom: 0;
}

.input-group {
    display: flex;
}

input#search-input {
    flex-grow: 1;
    line-height: 1.1em;
    font-size: 1.1em;
    padding: 5px 8px;
    max-width: 100%;
}

form input,
form button {
    background: #eaeaea;
    border: 1px solid #c2c2c2;
}

form button {
    display: flex;
    align-items: center;
    cursor: pointer;
    line-height: 1.1em;
    font-size: 1.1em;
    padding: 4px 9px;
}

form button:hover {
    background: #eaeaea;
}

button .fa-search {
    height: 15px;
    margin-right: 5px;
}


/* no-js */

.no-js form button {
    display: block;
}

.no-js .input-group :first-child {
    border-radius: 5px 0 0 5px;
}

.no-js .input-group :last-child {
    border-radius: 0 5px 5px 0;
}

.yes-js form button {
    display: none;
}

.yes-js .input-group :first-child {
    border-radius: 5px;
}


/* sections */

section {
    padding: 25px;
}

h2 {
    text-align: center;
}


/* elements */

svg {
    max-width: 100%;
}

svg.hero {
    height: 200px;
}


/* states */

[data-state] #splash,
[data-state] #results,
[data-state] #empty {
    display: none;
}

[data-state='clean'] #splash {
    display: block
}

[data-state='results'] #results {
    display: block
}

[data-state='empty'] #empty {
    display: block
}


/* results */

section#results {
    padding-top: 0;
}

.results-summary {
    text-align: right;
}

ul.results-body {
    padding-left: 0;
    display: grid;
    grid-auto-rows: auto;
    grid-template-columns: auto;
    grid-column-gap: 15px;
    grid-row-gap: 15px;
    margin-top: 45px;
}

.results-body li {
    list-style: none;
}

a.user {
    text-decoration: none;
    color: black;
    background: whitesmoke;
    transition: background-color .4s ease, border-color .4s ease;
    padding: 15px;
    border-radius: 4px;
    display: grid;
    grid-template-columns: auto auto 1fr;
    grid-template-rows: repeat(4, auto);
    grid-column-gap: 15px;
    grid-row-gap: 2px;
    grid-template-areas: "profile title title" "profile bio bio" "profile following stars" "profile followers repos";
    border: 2px solid transparent;
}

.profile {
    grid-area: profile
}

.login {
    grid-area: title
}

.bio {
    grid-area: bio
}

.following {
    grid-area: following
}

.followers {
    grid-area: followers
}

.stars {
    grid-area: stars
}

.repos {
    grid-area: repos
}

a.user:hover,
a.user:focus {
    background: #e9f3ff;
    border: 2px solid #0366D6;
    outline: none;
}

.profile {
    border-radius: 50%;
    width: 60px;
    height: 60px;
}

.login {
    font-size: 2em;
    font-weight: bold;
    word-break: break-word;
    line-height: 1em;
}

.bio {
    color: #404040;
}

.icon-data {
    display: flex;
    align-items: center;
}

.icon-data svg {
    height: 16px;
    width: 16px;
}


/* footer */

footer {
    background: #24292e;
    padding: 25px;
    text-align: center;
    color: white;
}

footer a {
    color: white;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    text-decoration: none;
    font-size: 1.2em;
    transition: color .4s ease;
}

footer svg {
    height: 25px;
    margin-right: 15px;
}

footer a:hover,
footer a:focus {
    color: #ebf4ff;
}


/* media queries */

@media screen and (min-width: 750px) {
    ul.results-body {
        grid-template-columns: 1fr 1fr;
    }
}

@media screen and (min-width: 400px) {
    a.user {
        grid-template-columns: auto 1fr;
        grid-template-areas: "profile title" "profile bio" "profile following" "profile stars" "profile followers" "profile repos";
    }
}

@media screen and (max-width: 600px) {
    header h1 {
        font-size: 1.6em;
    }
    .brand,
    .brand svg {
        height: 30px;
    }
}

